--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-use-scroll-direction": "^0.1.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
