--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/react": "^3.0.0",
     "framer-motion": "^11.0.25",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-use-scroll-direction": "^0.1.0",
+    "tsparticles": "^3.3.0",
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
