--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@tsparticles/react": "^3.0.0",
+    "@types/three": "^0.163.0",
     "framer-motion": "^11.0.25",
+    "framer-motion-3d": "^11.1.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-use-scroll-direction": "^0.1.0",
+    "three": "^0.163.0",
     "tsparticles": "^3.3.0",
     "use-sound": "^4.0.1"
   },
