--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@types/three": "^0.163.0",
     "framer-motion": "^11.0.25",
     "framer-motion-3d": "^11.1.5",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
